[package]
name = "aoutils"
version = "0.1.1"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A tiny utilities package to test publishing to crates.io"
homepage = "https://github.com/Andrew-OHara/aoutils"
repository = "https://github.com/Andrew-OHara/aoutils"
readme = "readme.md"

[dependencies]
